--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,32 @@ html {
 
 body {
   margin: 0;
+  display: grid;
+  grid-template-areas:
+  "banner banner banner"
+  "main main main"
 }
 
 img {
   display: block;
   width: 100%;
+}
+
+.banner {
+  grid-area: banner;
+}
+
+.main {
+  grid-area: main;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+
+}
+
+a {
+  text-decoration: underline;
+  color: #3783a3;
 }
