--- a/css/main.css
+++ b/css/main.css
@@ -41,11 +41,26 @@ body {
 
 img {
   width: 100%;
+
+  grid-column: 1 / 4;
+  grid-row: 1;
+}
+
+h1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+nav {
+  grid-column: 4;
+  grid-row: 1;
 }
 
 ul {
   display: flex;
+  list-style-type: none;
 }
+
 a {
   text-decoration: underline;
   color: #3783a3;
