--- a/css/main.css
+++ b/css/main.css
@@ -50,17 +50,6 @@ header img {
     align-self: flex-end;
 }
 
-h1 {
-  grid-column: 1;
-  grid-row: 1;
-  z-index: 1;
-
-  display: flex;
-  flex-direction: column;
-
-  padding: 1rem;
-
-}
 
 nav {
   grid-column:  5 / 6;
@@ -70,7 +59,7 @@ nav {
 ul {
   list-style-type: none;
   display: flex;
-  flex-wrap: nowrap;
+  align-items: space-between;
 }
 
 a {
