--- a/css/main.css
+++ b/css/main.css
@@ -43,13 +43,22 @@ img {
   width: 100%;
 }
 
-header img {
-
-    grid-column: 1 / 6;
-    grid-row: 1;
-    align-self: flex-end;
+header > img {
+  grid-column: 1 / 6;
 }
 
+header > h2 {
+  grid-column: 1;
+  grid-row: 1;
+  align-self: flex-end;
+
+}
+header > h3 {
+  grid-column: 1;
+  grid-row: 1;
+  align-self: flex-end;
+  margin: 1.5rem;
+}
 
 nav {
   grid-column:  5 / 6;
@@ -66,4 +75,8 @@ a {
   text-decoration: underline;
   color: #3783a3;
   display: flex;
+}
+
+.center {
+  align-items: center;
 }
