--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,14 @@ img {
   width: 100%;
 }
 
-
-.banner {
+header {
   grid-area: banner;
-
 }
+
+main {
+  grid-area: main;
+}
+
 
 li {
   list-style-type: none;
