Add grid template areas to header and main tags

--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,14 @@ html {
   font-family: "Noto Sans JP", sans-serif;
   font-style: normal;
 }
+
+header {
+  display: grid;
+  grid-template-row: 1fr 1fr 1fr;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-row: 1fr 1fr;
+}
