--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font-family: "Noto Sans", sans-serif;
-  line-height: 1.5;
+  line-height: 1.3;
 }
 
 *,
@@ -17,6 +17,46 @@ html {
   font-style: normal;
 }
 
+h1,
+p {
+  margin: 0 0 1.3rem;
+}
+
+img {
+  width: 100%;
+}
+
 body {
   margin: 0;
+}
+
+header {
+  display: grid;
+  grid-template-column: 1fr;
+  grid-template-rows: 5em 5em 5em 5em;
+  grid-template-areas:
+  "banner"
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+header > img {
+  grid-area: banner;
+  grid-row: 6;
+  grid-column: 1 / 3;
+}
+
+nav > ul {
+  list-style-type: none;
+
+  display: flex;
+}
+
+ul > li {
+  display: flex;
+  justify-content: space-around;
+  text-color: #3783a3;
 }
