--- a/css/main.css
+++ b/css/main.css
@@ -28,35 +28,26 @@ img {
 
 body {
   margin: 0;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-row: 1fr 1fr;
+  grid-template-areas:
+  "banner"
+  "main"
 }
 
 header {
   display: grid;
-  grid-template-column: 1fr;
-  grid-template-rows: 5em 5em 5em 5em;
-  grid-template-areas:
-  "banner"
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-header > img {
   grid-area: banner;
-  grid-row: 6;
-  grid-column: 1 / 3;
 }
 
-nav > ul {
-  list-style-type: none;
-
+header > h1 {
   display: flex;
+  justify-content: center;
 }
 
-ul > li {
-  display: flex;
-  justify-content: space-around;
-  text-color: #3783a3;
+main {
+  display: grid;
+  grid-area: main;
 }
