--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,33 @@ header {
 header > h1 {
   display: flex;
   justify-content: center;
+  margin: 0;
+  padding: 0;
+
 }
+
+header > h2 {
+  display: flex;
+  justify-content: center;
+}
+
+header > nav {
+  display: flex;
+  justify-content: center;
+}
+
+nav > ul {
+  display: flex;
+  flex-direction: row;
+}
+
+nav > ul > li {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+
 
 main {
   display: grid;
