--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,8 @@ a {
 main {
   display: grid;
   grid-area: main;
+  padding: 0;
+  margin: 0;
 }
 
 main > section > h2 {
@@ -107,8 +109,22 @@ main > section > p {
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-ul > img {
-  order: -1;
+
+ul > li > h2, h3 {
+  padding: 0;
+  margin: 0;
+}
+
+ul > li > img {
+  display: flex;
+  align-items: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
 }
