--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,11 @@ main {
   margin: 0;
 }
 
+main > section {
+  border-top: .2rem solid #000;
+  border-bottom: .2rem solid #000;
+}
+
 main > section > h2 {
   display: flex;
   justify-content: center;
@@ -106,6 +111,7 @@ main > section > p {
   margin: 1.5rem;
   align-self: stretch;
 }
+
 
 ul {
   list-style-type: none;
@@ -123,6 +129,13 @@ ul > li > img {
   display: flex;
   align-items: center;
 }
+
+main > ul > li > a {
+  text-decoration: none;
+  border: .2rem solid #3783a3;
+  border-radius: .3rem;
+}
+
 
 footer {
   display: flex;
