--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,10 @@ header > nav {
   margin: 0;
 }
 
+header > img {
+  margin-bottom: 1.5rem;
+}
+
 nav > ul {
   display: flex;
   flex-direction: row;
@@ -94,6 +98,7 @@ main {
 main > section {
   border-top: .2rem solid #000;
   border-bottom: .2rem solid #000;
+  margin-bottom: 1.5rem;
 }
 
 main > section > h2 {
@@ -112,6 +117,10 @@ main > section > p {
   align-self: stretch;
 }
 
+main > ul > li> img {
+  margin-bottom: 1.5rem;
+
+}
 
 ul {
   list-style-type: none;
@@ -121,13 +130,12 @@ ul {
 
 
 ul > li > h2, h3 {
-  padding: 0;
+  padding: .5rem;
   margin: 0;
 }
 
-ul > li > img {
-  display: flex;
-  align-items: center;
+ul > li > p {
+  margin: 1.5rem;
 }
 
 main > ul > li > a {
