--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font-family: "Noto Sans", sans-serif;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 
 *,
@@ -65,6 +65,8 @@ header > nav {
 
 header > img {
   margin-bottom: 1.5rem;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 nav > ul {
@@ -95,6 +97,10 @@ main {
   margin: 0;
 }
 
+p {
+  font-size: 1rem;
+}
+
 main > section {
   border-top: .2rem solid #000;
   border-bottom: .2rem solid #000;
@@ -119,6 +125,8 @@ main > section > p {
 
 main > ul > li> img {
   margin-bottom: 1.5rem;
+  padding-right: 1em;
+  padding-left: 1em;
 
 }
 
@@ -130,12 +138,12 @@ ul {
 
 
 ul > li > h2, h3 {
-  padding: .5rem;
+  padding: 0 1em;
   margin: 0;
 }
 
 ul > li > p {
-  margin: 1.5rem;
+  padding: .5em 1em .6em;
 }
 
 main > ul > li > a {
