--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ header {
 header > h1 {
   display: flex;
   justify-content: center;
+  font-size: 1.5rem;
   margin: 0;
   padding: 0;
 }
@@ -52,6 +53,7 @@ header > h1 {
 header > h2 {
   display: flex;
   justify-content: center;
+  font-size: 1.125rem;
   padding: 0;
   margin: 0;
 }
@@ -64,7 +66,7 @@ header > nav {
 }
 
 header > img {
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
   margin-left: 0;
   margin-right: 0;
 }
