--- a/css/main.css
+++ b/css/main.css
@@ -40,12 +40,15 @@ body {
 header {
   display: grid;
   grid-area: banner;
+  margin-top: 1.5rem;
+  margin-right: 1em;
+  margin-left: 1em;
 }
 
 header > h1 {
   display: flex;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   margin: 0;
   padding: 0;
 }
@@ -63,12 +66,6 @@ header > nav {
   justify-content: center;
   padding: 0;
   margin: 0;
-}
-
-header > img {
-  margin-bottom: .5rem;
-  margin-left: 0;
-  margin-right: 0;
 }
 
 nav > ul {
