--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ header > h2 {
   display: flex;
   justify-content: center;
   font-size: 1.125rem;
-  padding: 0;
+  padding-bottom: 1em;
   margin: 0;
 }
 
