--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ header > h2 {
   display: flex;
   justify-content: center;
   font-size: 1.125rem;
-  padding-bottom: 1em;
+  padding: 0;
   margin: 0;
 }
 
@@ -77,7 +77,7 @@ nav > ul {
   display: flex;
   flex-direction: row;
   color: #3783a3;
-  font-size: 1.125rem;
+  font-size: 1rem;
   padding: 0;
   margin: 0;
 }
@@ -106,6 +106,7 @@ p {
   font-size: 1rem;
 }
 
+
 main > section {
   border-top: .2rem solid #e2e2e2;
   border-bottom: .2rem solid #e2e2e2;
@@ -116,15 +117,16 @@ main > section > h2 {
   display: flex;
   justify-content: center;
   font-size: 2rem;
-  padding: 0;
-  margin: 1.5rem;
+  padding: .5rem;
+  margin: 0;
+  align-items: center;
 }
 
 main > section > p {
   display: flex;
   justify-content: center;
-  padding: .5em 1em .6em;
-  margin: 1.5rem;
+  padding: .5rem;
+  margin: 0;
   align-self: stretch;
 }
 
@@ -141,6 +143,7 @@ ul {
 
 
 ul > li > h2, h3 {
+  font-size: 1.125rem;
   padding: 0;
   margin: 0;
 }
