--- a/css/main.css
+++ b/css/main.css
@@ -70,14 +70,14 @@ header > nav {
 
 header > img {
   padding-bottom: .5rem;
-  padding-top: 1rem;
+  padding-top: 0;
 }
 
 nav > ul {
   display: flex;
   flex-direction: row;
   color: #3783a3;
-  font-size: 1rem;
+  font-size: 1.125rem;
   padding: 0;
   margin: 0;
 }
