--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,7 @@ main {
   grid-area: main;
   padding: 1em;
   margin: 0;
+  border-bottom: .2rem solid #e2e2e2;
 }
 
 p {
@@ -119,15 +120,14 @@ main > section > h2 {
   font-size: 2rem;
   padding: .5rem;
   margin: 0;
-  align-items: center;
+  text-align: center;
 }
 
 main > section > p {
   display: flex;
-  justify-content: center;
   padding: .5rem;
   margin: 0;
-  align-self: stretch;
+  text-align: center;
 }
 
 main > ul > li> img {
@@ -148,6 +148,10 @@ ul > li > h2, h3 {
   margin: 0;
 }
 
+h3 {
+  padding-bottom: .5rem;
+}
+
 ul > li > p {
   padding: 0;
 }
@@ -156,12 +160,14 @@ main > ul > li > a {
   text-decoration: none;
   border: .2rem solid #3783a3;
   border-radius: .3rem;
+  border-opacity: 50%;
   padding: .5em 1em .6em;
   margin-bottom: 1.5rem;
 }
 
 
 footer {
+  padding-top: 1em;
   display: flex;
   justify-content: center;
 }
