--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ main > section > h2 {
 
 main > section > p {
   display: flex;
-  padding: .5rem;
+  padding: 1rem;
   margin: 0;
   text-align: center;
 }
@@ -144,12 +144,16 @@ ul {
 
 
 ul > li > h2, h3 {
-  font-size: 1.125rem;
   padding: 0;
   margin: 0;
 }
 
+h2 {
+  font-size: 1.5rem;
+}
+
 h3 {
+  font-size: 1rem;
   padding-bottom: .5rem;
 }
 
