--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ main > ul > li > a {
   text-decoration: none;
   border: .2rem solid #3783a3;
   border-radius: .3rem;
-  border-opacity: 50%;
+  opacity: 50%;
   padding: .5em 1em .6em;
   margin-bottom: 1.5rem;
 }
