--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ h2 {
 
 h3 {
   font-size: 1rem;
-  padding-bottom: .5rem;
+  padding-bottom: 1rem;
 }
 
 ul > li > p {
@@ -164,8 +164,8 @@ ul > li > p {
 main > ul > li > a {
   text-decoration: none;
   border: .2rem solid #3783a3;
+  opacity: 0.5;
   border-radius: .3rem;
-  opacity: 50%;
   padding: .5em 1em .6em;
   margin-bottom: 1.5rem;
 }
