--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,6 @@ html {
   font-style: normal;
 }
 
-h1,
-p {
-  margin: 0 0 1.3rem;
-}
-
 img {
   width: 100%;
 }
@@ -45,7 +40,7 @@ header {
   margin-left: 1em;
 }
 
-header > h1 {
+header > h1 > i {
   display: flex;
   justify-content: center;
   font-size: 2rem;
@@ -53,7 +48,7 @@ header > h1 {
   padding: 0;
 }
 
-header > h2 {
+header > h1 > span {
   display: flex;
   justify-content: center;
   font-size: 1.125rem;
@@ -114,7 +109,7 @@ main > section {
   margin-bottom: 1.5rem;
 }
 
-main > section > h2 {
+main > section > i {
   display: flex;
   justify-content: center;
   font-size: 2rem;
@@ -143,7 +138,7 @@ ul {
 }
 
 
-ul > li > h2, h3 {
+ul > li > i, h3 {
   padding: 0;
   margin: 0;
 }
