--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,13 @@ body {
 header {
   display: grid;
   grid-area: banner;
-  margin-top: 1.5rem;
-  margin-right: 1em;
-  margin-left: 1em;
+  margin: 0;
+  padding: 0;
+}
+
+header > h1 {
+  padding: .5em 1em .6em;
+  margin: 0;
 }
 
 header > h1 > i {
