--- a/css/main.css
+++ b/css/main.css
@@ -35,15 +35,14 @@ body {
 header {
   display: grid;
   grid-area: banner;
-  margin: 0;
+  margin: 1em 1em 0 1em;
   padding: 0;
 }
 
 header > h1 {
-  padding: .5em 1em .6em;
+  padding: 0;
   margin: 0;
 }
-
 header > h1 > i {
   display: flex;
   justify-content: center;
