--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ p {
 main > section {
   border-top: .2rem solid #e2e2e2;
   border-bottom: .2rem solid #e2e2e2;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 main > section > i {
@@ -141,18 +141,19 @@ ul {
 }
 
 
-ul > li > i, h3 {
+ul > li > i, h2 {
   padding: 0;
   margin: 0;
 }
 
 h2 {
-  font-size: 1.5rem;
-}
-
-h3 {
   font-size: 1rem;
   padding-bottom: 1rem;
+}
+
+ul > li > i {
+  font-size: 1.125rem;
+  font-weight: bolder;
 }
 
 ul > li > p {
@@ -162,15 +163,16 @@ ul > li > p {
 main > ul > li > a {
   text-decoration: none;
   border: .2rem solid #3783a3;
-  opacity: 0.5;
+  opacity: 0.75;
   border-radius: .3rem;
   padding: .5em 1em .6em;
   margin-bottom: 1.5rem;
 }
 
-
 footer {
+  font-size: 1rem;
   padding-top: 1em;
   display: flex;
   justify-content: center;
+  vertical-align: center;
 }
