--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ header > h1 {
   padding: 0;
   margin: 0;
 }
-header > h1 > i {
+header > h1 > :lang(ja) {
   display: flex;
   justify-content: center;
   font-size: 2rem;
@@ -112,7 +112,7 @@ main > section {
   margin-bottom: 1.5rem;
 }
 
-main > section > i {
+main > section > :lang(ja) {
   display: flex;
   justify-content: center;
   font-size: 2rem;
@@ -129,7 +129,7 @@ main > section > p {
   text-align: center;
 }
 
-main > ul > li> img {
+main > ul > li > img {
   margin-bottom: 1.5em;
 
 }
@@ -152,7 +152,7 @@ h2 {
   font-size: 1rem;
 }
 
-ul > li > i {
+ul > li > :lang(ja) {
   font-size: 1.5rem;
   font-weight: bolder;
 }
