--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ main > section > i {
 main > section > p {
   display: flex;
   padding: 1rem;
-  margin: 0;
+  margin-bottom: 1.5rem;
   text-align: center;
 }
 
@@ -156,7 +156,7 @@ li > h2 {
 
 
 ul > li > i {
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   font-weight: bolder;
 }
 
