--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@ body {
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-row: 1fr 1fr;
   grid-template-areas:
   "banner"
   "main"
@@ -175,7 +174,7 @@ main > ul > li > a {
 
 
 footer {
-  font-size: .5rem;
+  font-size: 1rem;
   padding: 1em;
   display: flex;
   justify-content: center;
